# vectorose

./: .flake8  .gitignore  .readthedocs.yml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci-cd.yml  ci-win.yml  draft-pdf.yml
docs/: Makefile  conf.py  example.ipynb  index.md  make.bat  refs.bib
docs/assets/sample_plots/: README.md
docs/users_guide/: advanced_histograms.md  animations.md  data_format.md  installation.md  plot_types.md  quickstart.md  quickstart_vectors.npy  references.md  rotated_layers.md  statistics.md  users_guide.md  vectors_intro.md
examples/: GALLERY_HEADER.rst  animations.py
paper/: paper.bib  paper.md
resources/readme_examples/: directional_statistics.py  histogram_construction.py
src/anisotropy_rose/: __init__.py  anisotropy_rose.py  core.py  io.py  main.py  mock_data.py  plotting.py  vf_io.py
src/vectorose/: __init__.py  core.py  io.py  main.py  mock_data.py  plotting.py  polar_data.py  rectplot.py  sphere_base.py  stats.py  tregenza_sphere.py  triangle_sphere.py  triplot.py  util.py  vectorose.py  vf_io.py
tests/: test_io.py  test_plotting.py  test_polar_data.py  test_stats.py  test_tregenza_sphere.py  test_triangle_sphere.py  test_util.py
