[project]
name = "vectorose"
version = "0.1.0"
description = "Plot polar and spherical histograms from orientation data."
authors = [{ name = "Benjamin Z. Rudski", email = "benjamin.rudski@mail.mcgill.ca" },
    { name = "Joseph Deering", email = "joseph.deering@mcgill.ca" },
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "matplotlib",
    "pandas",
    "openpyxl",
    "trimesh[easy]",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "jupyter",
    "myst-nb",
    "sphinx-autoapi",
    "python-semantic-release",
    "ipympl",
    "pydata-sphinx-theme",
    "black"
]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["osx-arm64", "linux-64", "osx-64", "win-64"]

[tool.pixi.pypi-dependencies]
vectorose = { path = ".", editable = true }

[tool.pixi.dependencies]
scipy = ">=1.14.0,<2"
numpy = ">=1.19.5,<2"
matplotlib = ">=3.3.4"
pandas = ">=1.1.3"
openpyxl = ">=3.1.2,<4"
trimesh = ">=4.3.0, <5"
ffmpeg = "*"
pixi-pycharm = ">=0.0.6,<0.0.7"
importlib-metadata = ">=8.2.0,<9"

[tool.pixi.feature.dev.dependencies]
pytest = ">=7.4.4"
pytest-cov = ">=4.1.0"
jupyter = ">=1.0.0"
myst-nb = ">=1.0.0"
sphinx-autoapi = ">=3.0.0"
python-semantic-release = ">=8.7.0"
ipympl = ">=0.9.4"
pydata-sphinx-theme = ">=0.15.3"

[tool.pixi.tasks]

[tool.pixi.environments]
default = { solve-group = "default" }
dev = { features = ["dev"], solve-group = "default" }


[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
branch = "main" # branch to make releases of
build_command = "hatch build" # build dists
upload_to_pypi = false # don't auto-upload to pypi
remove_dist = false # don't remove dists
patch_without_tag = true # patch release by default

[tool.semantic_release.publish]
upload_to_vcs_release = true
