[tool.poetry]
name = "vectorose"
version = "0.1.0"
description = "Plot polar and spherical histograms from orientation data."
authors = [
    "Benjamin Z. Rudski <benjamin.rudski@mail.mcgill.ca>",
    "Joseph Deering <joseph.deering@mcgill.ca>",
]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10"
numpy = "^1.19.5"
matplotlib = ">=3.3.4"
pandas = ">=1.1.3"
openpyxl = "^3.1.2"
trimesh = {extras = ["easy"], version = "^4.3.0"}
imageio-ffmpeg = "^0.5.1"
scipy = "^1.14"
importlib-metadata = ">=7.0.1"
pyvista = "^0.44.1"
imageio = {version = "2.27.0", extras = ["ffmpeg", "pyav"]}

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pytest-cov = "^4.1.0"
jupyter = "^1.0.0"
myst-nb = "^1.0.0"
sphinx-autoapi = "^3.0.0"
python-semantic-release = "^8.7.0"
ipympl = "^0.9.4"
pydata-sphinx-theme = "^0.15.3"

[tool.semantic_release]
version_toml = [
    "pyproject.toml:tool.poetry.version"
]
branch = "main" # branch to make releases of
build_command = "poetry build" # build dists
upload_to_pypi = false # don't auto-upload to pypi
remove_dist = false # don't remove dists
patch_without_tag = true # patch release by default

[tool.semantic_release.publish]
upload_to_vcs_release = true


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
